<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.personal</groupId>
    <artifactId>hephaestus-api</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>hephaestus-api</name>

    <modules>
        <module>api-gateway</module>
        <module>shared</module>
        <module>washing-machine-app</module>
        <module>washing-machine-domain</module>
        <module>solar-panel-app</module>
        <module>solar-panel-domain</module>
        <module>product</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <spring-cloud.version>2023.0.2</spring-cloud.version>
        <excluded-tests.group>slow</excluded-tests.group>
    </properties>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.2</version>
    </parent>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies> <!-- Will be available in all modules -->
        <dependency>
            <!-- @Getter, @Setter, @Data, @Slf4j ... -->
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <dependency>
            <!-- isNotBlank() ... -->
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>

        <dependency>
            <!-- ImmutableList ... -->
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.2.1-jre</version>
        </dependency>

        <dependency>
            <!-- @Test, @Nested, @SpringBootTest, @AutoConfigureMockMvc ... -->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- ***************** -->
        <!-- TEST CONTAINERS  -->
        <!-- ***************** -->

        <dependency>
            <!-- @ServiceConnection, ... -->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-testcontainers</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <!-- @Container, @TestContainers -->
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <!-- PostgreSQLContainer, ... -->
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <version>1.19.8</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <!-- Used to create dockerfiles without writing them -->
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>3.4.1</version>
                    <configuration>
                        <from>
                            <image>
                                <!-- Base image to use + @sha to create the container image -->
                                eclipse-temurin:17.0.13_11-jre@sha256:f134ba24cfce43c6734a0627e4b6b8eb6ab0b2ae2ec07ff1c527c08165da26ff
                            </image>
                        </from>
                        <to>
                            <tags>
                                <tag>latest</tag>
                            </tags>
                        </to>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins> <!-- Will be available in all modules -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Exclude all test that have the tag "slow" when running maven lifecycle test -->
                    <!-- During GitHub actions this is set to (none), meaning all tests are included and ran -->
                    <excludedGroups>${excluded-tests.group}</excludedGroups>
                </configuration>
                <version>3.2.5</version>
            </plugin>
        </plugins>
    </build>
</project>